Fix logo border content shifting

--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,8 @@
     width: 40px;
     margin-right: 10px; 
     margin-top: 5px; 
+    border: 1px solid transparent;
+    border-radius: 50%;
   }
   
   .logo img {
@@ -199,7 +201,6 @@
 
   .logo:hover {
     border: 1px solid #d3d3d3;
-    border-radius: 50%;
   }
   
   .sidebar li a:hover {
